--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,12 +20,11 @@ android {
 }
 
 dependencies {
-	compile fileTree(dir: 'libs', include: ['*.jar'])
+	compile fileTree(include: ['*.jar'], dir: 'libs')
 	compile 'com.android.support:appcompat-v7:21.0.3'
-
 	compile 'com.google.dagger:dagger:2.0'
 	apt 'com.google.dagger:dagger-compiler:2.0'
 	provided 'org.glassfish:javax.annotation:10.0-b28'
-
-	compile files('libs/jeval.jar')
+	compile files('libs/symja.jar')
+	compile files('libs/log4j.jar')
 }
