--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,6 +25,5 @@ dependencies {
 	compile 'com.google.dagger:dagger:2.0'
 	apt 'com.google.dagger:dagger-compiler:2.0'
 	provided 'org.glassfish:javax.annotation:10.0-b28'
-	compile files('libs/symja.jar')
-	compile files('libs/log4j.jar')
+	compile files('libs/exp4j-0.4.5.jar')
 }
