--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,6 @@ dependencies {
 	apt 'com.google.dagger:dagger-compiler:2.0'
 	provided 'org.glassfish:javax.annotation:10.0-b28'
 	compile files('libs/exp4j-0.4.5.jar')
+	compile files('libs/log4j-1.2.11.jar')
+	compile files('libs/symja-2015-05-17.jar')
 }
