--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,9 +1,12 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.neenbedankt.android-apt'
 android {
-	compileSdkVersion 21
-	buildToolsVersion "21.1.2"
-
+	signingConfigs {
+		config {
+		}
+	}
+	compileSdkVersion 22
+	buildToolsVersion '22.0.1'
 	defaultConfig {
 		applicationId "tudor.com.supercalc"
 		minSdkVersion 14
@@ -17,15 +20,23 @@ android {
 			proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
 		}
 	}
+	productFlavors {
+		androidTheme {
+		}
+		iOSTheme {
+
+			minSdkVersion 14
+			applicationId 'tudor.com.supercalc'
+			targetSdkVersion 21
+			versionCode 1
+			versionName '1.0'
+		}
+	}
 }
 
 dependencies {
 	compile fileTree(include: ['*.jar'], dir: 'libs')
 	compile 'com.android.support:appcompat-v7:21.0.3'
-	compile 'com.google.dagger:dagger:2.0'
-	apt 'com.google.dagger:dagger-compiler:2.0'
-	provided 'org.glassfish:javax.annotation:10.0-b28'
 	compile files('libs/exp4j-0.4.5.jar')
-	compile files('libs/log4j-1.2.11.jar')
-	compile files('libs/symja-2015-05-17.jar')
+	compile 'com.melnykov:floatingactionbutton:1.3.0'
 }
