--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest
-    package="tudor.com.supercalc"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+    package="tudor.com.calculatorSleek"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:versionCode="2"
+    android:versionName="1.1"
+    >
+
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
 
     <uses-sdk
         android:minSdkVersion="16"
@@ -11,25 +17,21 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-<<<<<<< HEAD
         android:theme="@style/AppTheme.Base">
-=======
-        >
->>>>>>> development
+        <meta-data android:name="com.google.android.gms.version"
+                   android:value="@integer/google_play_services_version" />
         <activity
-            android:name=".MainActivity"
-<<<<<<< HEAD
+            android:name="tudor.com.calculatorSleek.MainActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait">
-=======
-            android:theme="@style/AppTheme"
-            android:label="@string/app_name" >
->>>>>>> development
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="com.google.android.gms.ads.AdActivity"
+                  android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
+                  android:theme="@android:style/Theme.Translucent" />
     </application>
 
 </manifest>
