--- a/build.gradle
+++ b/build.gradle
@@ -3,12 +3,15 @@
 buildscript {
 	repositories {
 		jcenter()
+        mavenCentral()
+        maven { url 'https://maven.fabric.io/public' }
 	}
 	dependencies {
-		classpath 'com.android.tools.build:gradle:1.2.3'
+		classpath 'com.android.tools.build:gradle:1.3.0'
 		classpath 'com.neenbedankt.gradle.plugins:android-apt:1.4'
 		// NOTE: Do not place your application dependencies here; they belong
 		// in the individual module build.gradle files
+        classpath 'io.fabric.tools:gradle:1.21.2'
 
 
 	}
@@ -21,6 +24,7 @@ allprojects {
 		maven{
 			url 'https://oss.sonatype.org/content/repositories/snapshots/'
 		}
+        maven { url 'https://maven.fabric.io/public' }
 
 	}
 }
