--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,12 +2,12 @@ apply plugin: 'com.android.application'
 apply plugin: 'com.neenbedankt.android-apt'
 apply plugin: 'io.fabric'
 android {
-	compileSdkVersion 23
-	buildToolsVersion '23.0.2'
+	compileSdkVersion 24
+	buildToolsVersion '23.0.3'
 	defaultConfig {
 		applicationId "tudor.com.calculatorSleek.android"
-		minSdkVersion 9
-		targetSdkVersion 23
+		minSdkVersion 14
+		targetSdkVersion 24
 		versionCode 8
 		versionName "1.0.7"
 	}
@@ -26,9 +26,11 @@ android {
 
 dependencies {
 	compile fileTree(include: ['*.jar'], dir: 'libs')
-	compile files('libs/exp4j-0.4.5.jar')
-	compile 'com.android.support:appcompat-v7:23.1.1'
+	compile 'com.android.support:appcompat-v7:24.1.1'
     compile('com.crashlytics.sdk.android:crashlytics:2.5.5@aar') {
         transitive = true;
     }
+
+	compile 'com.udojava:EvalEx:1.0'
+	compile 'io.github.kexanie.library:MathView:0.0.6'
 }
